--- a/style.css
+++ b/style.css
@@ -9,3 +9,16 @@ body{
     font-family: 'Roboto', sans-serif;
 
 }
+menu-area{
+    position:fixed;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: rgba(224,228,231,0.2);
+    width:100%;
+    height: 70px;
+    z-index: 1;
+    
+}
