Added background picture and styling for the name of the company

--- a/style.css
+++ b/style.css
@@ -30,3 +30,12 @@ menu-area{
     margin-right: 15%;
 
 }
+logo{
+    flex: 1 1 auto;
+    margin-left:10%;
+    text-transform: uppercase;
+    letter-spacing: 1 px;
+    font-weight: bolder;
+    font-size:  25 px;
+
+}
