Set the width of the image and font styling for the main content

--- a/style.css
+++ b/style.css
@@ -56,3 +56,14 @@ a{
     text-align: center;
     
 }
+
+#Home .content{
+    width: 100%;
+}
+
+#Home .content h1{
+    font-size: 60px;
+    margin: 10px 0;
+    color:#fff;
+
+}
