--- a/style.css
+++ b/style.css
@@ -79,3 +79,13 @@ a{
     line-height: 1.6;
     color: #fff;
 }
+#About #Portfolio #Services #Contact{
+    position:relative; 
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
+    height: 100vh;
+}
