--- a/style.css
+++ b/style.css
@@ -89,3 +89,16 @@ a{
     width: 100%;
     height: 100vh;
 }
+
+.content{
+    width: 80%;
+    height: 100%;
+    padding: 15% 0;
+
+}
+
+.content h1{
+    font-size: 30px;
+    text-transform: uppercase;
+
+}
