--- a/style.css
+++ b/style.css
@@ -102,3 +102,15 @@ a{
     text-transform: uppercase;
 
 }
+.content p{
+    font-size: 24px;
+    line-height: 50px;
+}
+
+p,h1{
+    padding-left: 100px;
+}
+
+p{
+    text-align: justify;
+}
