Changed the menu-area

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     font-family: 'Roboto', sans-serif;
 
 }
-menu-area{
+.menu-area{
     position:fixed;
     display:flex;
     justify-content: center;
